NXP-33619: centralize PageProviderSpec property/parameter constants
Define three shared constants on PageProviderSpec:

- PROPERTY_CORE_SESSION (was duplicated as CORE_SESSION_PROPERTY across
  9 page-provider classes);
- PARAMETER_VALUE_CURRENT_USER and PARAMETER_VALUE_CURRENT_REPOSITORY
  (were duplicated as CURRENT_USERID_PATTERN/CURRENT_REPO_PATTERN across
  4 places that each implemented the same substitution loop).

PageProviderServiceImpl#getPageProvider(PageProviderSpec) now expands
$currentUser/$currentRepository placeholders in the spec parameters
automatically when a CoreSession is provided through the
PROPERTY_CORE_SESSION property, so callers no longer need to perform
the substitution themselves.

Migrate all internal usages to the new central constants and drop the
now-redundant ordered-parameter substitution loops from QueryExecutor,
SearchObject, PageProviderHelper and QueryObject. Substitution that
feeds the search-document context (named parameters) is preserved.